2014-05-12  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.cpp:
	* X3DBrowserEditor.cpp:
	* MaterialEditor.cpp:
	* OutlineTreeModel.cpp:
	* SharedNode.u.svg:
	* X3DOutlineTreeView.cpp:
	* X3DBaseNode.u.svg:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2014-05-11  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineUserData.h:
	* X3DOutlineTreeView.cpp:
	* OutlineCellRenderer.cpp: 

2014-05-11  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineUserData.h:
	* OutlineRouteGraph.h:
	* OutlineTreeModel.cpp:
	* OutlineRouteGraph.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeObserver.cpp:
	* OutlineCellRenderer.cpp: 

2014-05-11  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp: 

2014-05-11  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeData.h:
	* OutlineTreeData.cpp:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeObserver.cpp:
	* X3DExecutionContext.svg:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* PROTO.png:
	* OutlineTreeData.h:
	* Prototype.svg:
	* OutlineTreeData.cpp:
	* OutlineTreeModel.cpp:
	* ExternProto.svg:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeObserver.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.xml: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* UndoStep.h:
	* UndoStep.cpp:
	* UndoHistory.h:
	* UndoHistory.cpp:
	* X3DBrowserEditor.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineCellRenderer.cpp: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp:
	* OutlineCellRenderer.cpp: 

2014-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp:
	* OutlineTreeData.h:
	* OutlineTreeModel.h:
	* OutlineTreeData.cpp:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.h:
	* OutlineRouteGraph.cpp:
	* X3DOutlineTreeView.cpp: