@@ -1,5 +1,10 @@
 2014-05-12  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineRouteGraph.cpp:
+	* X3DOutlineTreeView.cpp: 
+
+2014-05-12  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* MagicImport.cpp:
 	* X3DBrowserEditor.cpp:
 	* MaterialEditor.cpp:
